# gRPC-with-CMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
client/: CMakeLists.txt
client/src/: client.cc  client.h  main.cc
proto/: CMakeLists.txt
proto/myproto/: address.proto  addressbook.proto  control.proto
proto/robot/: control.proto  move.proto  stop.proto
server/: CMakeLists.txt
server/src/: async_control_impl.cc  async_control_impl.h  callback_control_impl.cc  callback_control_impl.h  control_impl.cc  control_impl.h  main.cc  server.cc  server.h  sync_control_impl.cc  sync_control_impl.h
